--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Excursion</title>
   </head>
   <body>
+    <h1>Discover hidden places in the world around you</h1>
+    <a href="#./">Download Excursion (Coming soon!)</a>
+    <h1>Your personal travel guide</h1>
+    <h3>Excursion remembers places you like, and recommends new points of interest around you.
+    </h3>
 
+    <h1>Coming Soon for iPhone and Android</h1>
+    <a href="#./">Download Excursion (Coming soon!)</a>
+    <p>Excursion</p>
   </body>
 </html>
