Last of the night Monday

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- this is boilerplate html; ready to fill in -->
+<!-- really learning Github -->
 <html>
   <head>
     <meta charset="utf-8">
