--- a/index.html
+++ b/index.html
@@ -2,18 +2,21 @@
 <!-- really learning Github -->
 <html>
   <head>
+    <link
+     href="./resources/css/style.css"
+     type="text/css" rel="stylesheet">
     <meta charset="utf-8">
     <title>Excursion</title>
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <a href="#./">Download Excursion (Coming soon!)</a>
-    <h1>Your personal travel guide</h1>
-    <h3>Excursion remembers places you like, and recommends new points of interest around you.
-    </h3>
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.
+    </p>
 
-    <h1>Coming Soon for iPhone and Android</h1>
+    <h2>Coming Soon for iPhone and Android</h2>
     <a href="#./">Download Excursion (Coming soon!)</a>
-    <p>Excursion</p>
+    <p class="copyright">&copy; Excursion</p>
   </body>
 </html>
